fixed the other problems besides the spacing for the list. Don't know how to fix it

--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,10 @@
 }
 
 .container{
-  line-height: 25px;
+  width: 50%;
+  margin: 0 auto;
 }
 
-.container img{
-  width: 550px;
-  /* align-items: center; */
-}
 
 h1{
   text-align: center;
@@ -22,7 +19,8 @@ body{
 }
 
 #ingridients ul li{
-  line-height: 30px;
+line-height: 30px;
+
 }
 
 #preperation ol li{ 
@@ -52,10 +50,7 @@ nav li{
   list-style: none;
   margin: 0 20px;
 }
-.container{
-  width: 60%;
-  margin: 0 auto;
-}
+
 span{
   position: relative;
   left: -8px;
